# dsie

./: .gitignore  LICENSE  README.md
BST/: README.md
BST/AVL/lingkerio/C-version/: AVL.c  AVL.h  Makefile  correct.c  main.c
BST/AVL/lingkerio/OCaml-version/AVLTree/: dune-project
BST/AVL/showlibia/Cpp-version/: CMakeLists.txt  avl.cc  avl.hh  correct.cc  main.cc
BST/AVL/showlibia/Cpp-version/make/: Makefile
BST/AVL/showlibia/Go-version/: Makefile  avl.go  common.go  correct.go  go.mod  main.go  test.go
BST/AVL/wisdomgo/cpp-version/: CMakeLists.txt
BST/AVL/wisdomgo/cpp-version/include/: avl.h
BST/AVL/wisdomgo/cpp-version/src/: avl.cpp  main.cpp
BST/Splay/lingkerio/C-version/: Makefile  correct.c  main.c  splay.c  splay.h
BST/Splay/lingkerio/OCaml-version/SplayTree/: dune-project
BST/benchmark/: average_time.fish  average_time.sh  benchmark_operations.csv  benchmark_v1.py  benchmark_v2.py  benchmark_v3.py  benchmark_v4.py  benchmark_v5.py
BST/correctness/: correct.sh
BST/simple_bst/lingkerio/C-version/: Makefile  bst.c  bst.h  correct.c  main.c
BST/simple_bst/lingkerio/OCaml-version/simple_bst/: dune-project
BST/simple_bst/lingkerio/Python-version/: Bst.py  correct.py  main.py
BST/simple_bst/showlibia/Cpp-version/: CMakeLists.txt  bst.cc  bst.h  correct.cc  correctness.csv  main.cc
BST/simple_bst/showlibia/Cpp-version/make/: Makefile
BST/simple_bst/showlibia/Java-version/: BST.java  Correct.java  Main.java
BST/simple_bst/wisdomgo/cpp-version/: CMakeLists.txt
BST/simple_bst/wisdomgo/cpp-version/include/: bst.h
BST/simple_bst/wisdomgo/cpp-version/src/: bst.cpp  main.cpp
(+12 files in other folders)
